--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "glamorous/TMDb-PHP-API",
+    "name": "glamorous/tmdb-php-api",
     "description": "PHP Class for using TMDb (themoviedb.org) API. Because of IMDB hasn't an API we provide this PHP5 class. It's pretty easy to recieve all information about a movie or an actor. No scraping needed.",
     "keywords": ["tmdb", "api"],
     "type": "library",
